Updates elasticsearch.md
Auto commit by GitBook Editor