@@ -1,5 +1,3 @@
-
-
 ## `项目使用的命令`
 
 ```
@@ -11,4 +9,8 @@ nohup ./leflow &
 ```
 
 
+
+kafka监控命令
+
+Java -Xms512M -Xmx512M -Xss1024K -XX:PermSize=256m -XX:MaxPermSize=512m -cp KafkaOffsetMonitor-assembly-0.2.0.jar com.quantifind.kafka.offsetapp.OffsetGetterWeb --zk localhost:2181 --port 8086 --refresh 10.seconds --retain 7.days 1&gt;wwt\_kafka/stdout.log 2&gt;wwt\_kafka/stderr.log &
 
